# utu

./: Cargo.toml  LICENSE  README.md  canvas-32.md  default.config.json  default.keys.json  doodles.md  sample.json
.cargo/: config.toml
src/: app.rs  buffer.rs  clipboard.rs  config.rs  editor.rs  editor_command.rs  key_binding.rs  keybinding.rs  keybinding2.rs  lib.rs  main.rs  marker.rs  nojson_ext.rs  tuinix_ext.rs  widget_legend.rs  widget_message.rs  widget_notification.rs  widget_preview.rs  widget_status.rs  widget_text.rs
