[package]
name = "utu"
version = "0.0.1"
edition = "2024"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
license = "MIT"
description = "TUI pixel art editor using plain text files"
homepage = "https://github.com/sile/utu"
repository = "https://github.com/sile/utu"
readme = "README.md"

[dependencies]
noargs = "0.4.1"
nojson = "0.1.2"
nopng = "0.0.1"
orfail = "1.1.0"
tuinix = "0.2.0"
unicode-width = "0.2.1"
